@@ -2,6 +2,7 @@
 
 * Deal with crashed sessions with no session file
 * Fixed bug setting TMPDIR in preferences
+* Added menu item 'Open crashed session'
 
 
 1.2.2 (13.01.2014):
